# paris-2025

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  TEMPLATE_SETUP.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  TEMPLATE_README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-format.yml  ci.yml
docs/: AI_CONTEXT.md  DEVELOPMENT_WORKFLOW.md  WORKFLOW_MONITORING.md
scripts/: auto_fix_workflow.py  check_workflows.py  robust_github_cli.py  setup_template.py
src/: __init__.py  calculator.py
tests/: __init__.py  test_calculator.py
